client: fix comments margin on mobile

--- a/client/css/post-main-view.styl
+++ b/client/css/post-main-view.styl
@@ -59,6 +59,8 @@
             margin-right: 0
         >.content
             order: 1
+    .comment-container
+        margin-top: 2em
 
 
 .post-view .readonly-sidebar
